<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/SeasonalFragmentTheme"
    tools:context="com.shah.voyager.MainFragmentsPackage.SeasonalFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/spring"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/spring" />

            <TextView
                style="@style/SeasonalTextView"
                android:text="@string/spring" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/summer"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/summer" />

            <TextView
                style="@style/SeasonalTextView"
                android:text="@string/summer" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/Monsoon"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/monsoon" />

            <TextView
                style="@style/SeasonalTextView"
                android:background="@color/trans_colorTextViewBackground"
                android:text="@string/monsoon" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/autumn"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/autumn" />

            <TextView
                style="@style/SeasonalTextView"
                android:text="@string/autumn" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/fall"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/fall" />

            <TextView
                style="@style/SeasonalTextView"
                android:text="@string/fall" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/winter"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/winter" />

            <TextView
                style="@style/SeasonalTextView"
                android:text="@string/winter"
                android:textColor="@android:color/black" />

        </android.support.v7.widget.CardView>

    </LinearLayout>


</ScrollView>
